# cloneaprocess

./: .gitignore  CLAUDE.md  README.md  package-lock.json  package.json  tsconfig.base.json
.devcontainer/: README.md  devcontainer.json
apps/desktop/: index.html  package.json  vite.config.ts
apps/desktop/src/: App.tsx  main.tsx  styles.css
apps/desktop/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/native/: xpc_bridge.m
apps/desktop/src-tauri/permissions/: agent.toml  ai.toml  clipboard.toml  permissions.toml  recorder.toml  storage.toml  workflow.toml
apps/desktop/src-tauri/resources/macos/: RecorderService  RunnerService
apps/desktop/src-tauri/src/: lib.rs  main.rs
apps/desktop/src-tauri/src/commands/: agent.rs  ai.rs  clipboard.rs  mod.rs  permissions.rs  recorder.rs  storage.rs  system.rs  workflow.rs
apps/desktop/src-tauri/src/core/: agent.rs  ai_compiler.rs  app_state.rs  helper_paths.rs  mod.rs  recorder.rs  recorder_xpc.rs  retention.rs  runner.rs  trace.rs
apps/desktop/src-tauri/src/storage/: database.rs  error.rs  mod.rs  sqlite.rs
apps/desktop/src-tauri/src/workflow/: mod.rs
docs/ipc/: README.md  versioning.md  xpc_bridge.h
docs/issues/: issue-tracker.md
native/mac-recorder-service/: Package.swift
native/mac-recorder-service/Sources/RecorderService/: ProtocolHandshake.swift  main.swift
native/mac-runner-service/: Package.swift
scripts/: bootstrap-recorder-xpc.sh  install-bundled-xpc-service.sh  run-desktop.sh  stage-native-helpers.sh
(+7 files in other folders)
