[package]
name = "cloneaprocess-desktop"
version = "0.1.0"
description = "Desktop shell for Clone a Process"
authors = ["Craig"]
edition = "2021"
default-run = "cloneaprocess-desktop"

[lib]
name = "cloneaprocess_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }

